[*]Added height-dependent snowfall in cold biomes. Snow will fall anywhere in these biomes above y=95. This only affects new worlds.
[*]Added frozen springs as a new snowy biome which can generate reeds.
[*]Added mangal (mangrove forest) as a new temperate jungle variant (temples, jungle spiders, reeds).
[*]Added arid forest as a new sub-biome which replaces woods spawning inside of plains in new worlds.
[*]Added pockets of water to wetlands, willow grove, jungle, and rainforest, similar to how vanilla generates water in jungles and swamps. This only affects new worlds.
[*]Added small oasis pockets inside lush deserts in addition to the large ones. This only affects new worlds.
[*]Added the ability for reeds to spawn in patagonia and plains. In the new climate distribution system it was possible to have extremely large distances between biomes which could spawn reeds, which could be a problem given how vital they are early game. So this, combined with frozen springs above, ensures every climate is capable of spawning reeds in at least one biome. However, temperate and tropical climates remain where reeds can be found most commonly.
[*]Added the ability for melons to spawn on the surface in jungle variants (jungle, rainforest, tropics, mangal).
[*]Changed configuration menu to have biome configration on its own page.
[*]Changed ocean size configuration to be a scale from 1 (off) to 10 (vanilla), defaulting to 5.
[*]Changed (increased) possible biome size ranges to 0.5x to 4x vanilla (Original BTA was 2x, vanilla large biomes is 4x). As a part of this, small world types have been deprecated as biome size information is now handled through generator options. These world types will continue to function for existing worlds but may no longer be created.
[*]Changed the default biome size to vanilla sized biomes as the new climate zone system tends to spread out dissimilar biomes further than before.